# cg

examples/: CMakeLists.txt
examples/Douglas-Peucher/: CMakeLists.txt  Douglas-Peucher.cpp
examples/convex_hull/: CMakeLists.txt  andrewschain_hull.cpp  dynamic_convex_hull.cpp  quickhull.cpp
examples/operations/: CMakeLists.txt  minkowsky_sum.cpp  polygon_diameter.cpp  rasterization.cpp  search_maximums.cpp  visibility_graph.cpp
examples/triangulation/: CMakeLists.txt~  Delaunay_triangulation.cpp
include/cg/Douglas-Peucher/: Douglas-Peucher.h
include/cg/convex_hull/: andrewschain.h  quickhull.h
include/cg/io/: triangle.h
include/cg/operations/: distance.h  minkowsky_sum.h  orientation.h  orientation.h.orig  polygon_diameter.h  rasterization.h  search_maximums.h  shortest_path.h  visibility_graph.h
include/cg/operations/contains/: contour_point.h
include/cg/operations/intersection/: segment_segment.h  triangle_triangle.h
include/cg/primitives/: contour.h  rectangle.h
include/cg/triangulation/: Delaunay_triangulation.h  triangulation_primitives.h
tests/: CMakeLists.txt  Delaunay_triangulation.cpp  Douglas-Peucher.cpp  contains.cpp  convex_hull.cpp  minkowsky_sum.cpp  polygon_diameter.cpp  search_maximums.cpp  segment_segment.cpp  visibility_graph.cpp
